--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-/*  max-width: 1700px;*/
-  max-width: 1350px;   /* match with other pages */
+  max-width: 1700px;
+/*  max-width: 1350px;*/   /* match with other pages */
   width: 100%;
   padding: 0 1.5rem;
-  margin: 0 auto;
+/*  margin: 0 auto; */
 }
 
 /* LOGO */
